force-app/main/default/objects/amazonconnect__AC_VoiceIdChannel__c/amazonconnect__AC_VoiceIdChannel__c.object-meta.xml
<CustomObject>
    <label>AC Voice Id Channel</label>
    <nameField>
        <displayFormat>Voice Id Channel {000000000}</displayFormat>
        <label>AC Voice Id Channel Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>AC Voice Id Channel</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>