force-app/main/default/objects/amazonconnect__AC_VoiceIdChannel__c/fields/amazonconnect__AuthenticationResultScore__c.field-meta.xml
<CustomField>
    <fullName>amazonconnect__AuthenticationResultScore__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Authentication Result Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>