force-app/main/default/objects/amazonconnect__AC_VoiceIdChannel__c/fields/amazonconnect__Case__c.field-meta.xml
<CustomField>
    <fullName>amazonconnect__Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Voice Id Channel Case</relationshipLabel>
    <relationshipName>Voice_Id_Channel_Case</relationshipName>
    <type>Lookup</type>
</CustomField>