force-app/main/default/objects/amazonconnect__AC_VoiceIdChannel__c/fields/amazonconnect__CustomerNumber__c.field-meta.xml
<CustomField>
    <fullName>amazonconnect__CustomerNumber__c</fullName>
    <label>Customer Number</label>
    <length>25</length>
    <type>Text</type>
</CustomField>