force-app/main/default/objects/amazonconnect__AC_VoiceIdChannel__c/fields/amazonconnect__FraudDetectionResultDecision__c.field-meta.xml
<CustomField>
    <fullName>amazonconnect__FraudDetectionResultDecision__c</fullName>
    <label>Fraud Detection Result Decision</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>NotEnabled</fullName>
            </value>
            <value>
                <fullName>HighRisk</fullName>
            </value>
            <value>
                <fullName>LowRisk</fullName>
            </value>
            <value>
                <fullName>Inconclusive</fullName>
            </value>
            <value>
                <fullName>Error</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>