force-app/main/default/objects/amazonconnect__AC_VoiceIdChannel__c/fields/amazonconnect__FraudDetectionResultReasons__c.field-meta.xml
<CustomField>
    <fullName>amazonconnect__FraudDetectionResultReasons__c</fullName>
    <label>Fraud Detection Result Reasons</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>KNOWN_FRAUDSTER</fullName>
            </value>
            <value>
                <fullName>REPLAYED_SPEECH</fullName>
            </value>
            <value>
                <fullName>SYNTHETIC_SPEECH</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>