force-app/main/default/objects/amazonconnect__AC_VoiceIdChannel__c/fields/amazonconnect__SfContact__c.field-meta.xml
<CustomField>
    <fullName>amazonconnect__SfContact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Salesforce Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Voice ID Channel Contact</relationshipLabel>
    <relationshipName>Voice_Id_Channel_Contact</relationshipName>
    <type>Lookup</type>
</CustomField>