force-app/main/default/objects/amazonconnect__AC_VoiceIdChannel__c/fields/amazonconnect__SpeakerId__c.field-meta.xml
<CustomField>
    <fullName>amazonconnect__SpeakerId__c</fullName>
    <label>Speaker Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>