force-app/main/default/objects/amazonconnect__AC_VoiceIdChannel__c/fields/amazonconnect__Status__c.field-meta.xml
<CustomField>
    <fullName>amazonconnect__Status__c</fullName>
    <label>Speaker Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>OPT_OUT</fullName>
            </value>
            <value>
                <fullName>ENROLLED</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>